--- a/福利姬频道/index.html
+++ b/福利姬频道/index.html
@@ -7,7 +7,7 @@
 <body>
   <h1>chunmomo</h1>
   <div id="advertise">
-    <iframe src="advertise.html" frameborder="0" width="100%" height="100"></iframe>
+    <iframe src="../advertise.html" frameborder="0" width="100%" height="100"></iframe>
   </div>
   <hr>
   <h2>page_test</h2>
