--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
 <html lang="zh">
 <head>
   <meta charset="UTF-8">
-  <title>chunmomo</title>
+  <title>频道资源首页</title>
 </head>
 <body>
-  <h1>chunmomo</h1>
+  <h1>频道链接大全</h1>
   <div id="advertise">
     <iframe src="advertise.html" frameborder="0" width="100%" height="100"></iframe>
   </div>
   <hr>
-  <h2>page_test</h2>
+  <h2>频道目录首页</h2>
   <p><a href="./福利姬频道/index.html">福利姬频道</a></p> 
 </body>
 </html>
