--- a/福利姬频道总目录/index.html
+++ b/福利姬频道总目录/index.html
@@ -5,12 +5,12 @@
   <title>chunmomo</title>
 </head>
 <body>
-  <h1>chunmomo</h1>
+  <h1>频道大全</h1>
   <div id="advertise">
     <iframe src="../advertise.html" frameborder="0" width="100%" height="100"></iframe>
   </div>
   <hr>
-  <h2>page_test</h2>
+  <h2>福利姬目录</h2>
   <p><a href="./ArtGravia全集/menu.html">ArtGravia全集</a></p> 
   <p><a href="./Asagiriai（愛ちゃん）全集/menu.html">Asagiriai（愛ちゃん）全集</a></p> 
   <p><a href="./AT鲨全集/menu.html">AT鲨全集</a></p> 
