--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   </div>
   <hr>
   <h2>频道目录首页</h2>
+  <p><a href="./漫画频道总目录/index.html">漫画频道总目录</a></p> 
   <p><a href="./福利姬频道总目录/index.html">福利姬频道总目录</a></p> 
 </body>
 </html>
