--- a/漫画(黑白)频道总目录/index.html
+++ b/漫画(黑白)频道总目录/index.html
@@ -8,6 +8,7 @@
   <h1>频道大全</h1>
   <div id="advertise">
     <iframe src="../advertise.html" frameborder="0" width="100%" height="100"></iframe>
+    <p><a href="../index.html">返回当前频道总目录</a></p>
   </div>
   <hr>
   <h2>漫画目录</h2>
