--- a/JAV/player_template.html
+++ b/JAV/player_template.html
@@ -6,7 +6,6 @@
 <title>播放器 - 线上看</title>
 <script src="https://cdn.jsdelivr.net/npm/hls.js@1.5.1/dist/hls.min.js"></script>
 <style>
-/* ======= 样式保持不变 ======= */
 body {
     margin: 0;
     padding: 0;
@@ -69,6 +68,8 @@ body {
 .video-controls button:hover {
     background-color: #555;
 }
+
+/* ✅ 右侧信息卡片 */
 .right-panel {
     width: 300px;
     display: flex;
@@ -83,6 +84,20 @@ body {
     width: 150px;
     border-radius: 8px;
 }
+
+/* ✅ 底部信息栏 */
+.down-panel {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  background-color: #202020;
+  padding: 12px;
+  border-radius: 10px 10px 0 0;
+  box-shadow: 0 -3px 15px rgba(0,0,0,0.6);
+  z-index: 99;
+}
+
 .playlist {
     display: flex;
     flex-wrap: wrap;
@@ -107,8 +122,8 @@ body {
     padding: 12px;
     border-radius: 8px;
 }
-.details h1 {
-    font-size: 1.3em;
+.details h2 {
+    font-size: 1.2em;
     margin: 0 0 10px;
     color: #fff;
 }
@@ -155,6 +170,7 @@ body {
             <video id="video" controls playsinline webkit-playsinline x5-playsinline></video>
             <div id="overlay"></div>
         </div>
+
         <div class="video-controls">
             <button id="prev">上一集</button>
             <button id="next">下一集</button>
@@ -163,21 +179,28 @@ body {
 
     <div class="right-panel">
         <div class="cover">
-            <img id="coverImg" src="" alt="封面">
+            <p><strong>出演女优:</strong> <span id="actors"></span></p>
+            <img id="coverImg" src="" alt="女优封面图">
         </div>
         <div class="playlist" id="playlist"></div>
         <div class="details">
-            <h1 id="title">剧名 - 集数</h1>
-            <p><strong>状态:</strong> <span id="status"></span></p>
+            <h2 id="info_title">剧名 - 集数</h2>
             <p><strong>类别:</strong> <span id="category"></span></p>
-            <p><strong>导演:</strong> <span id="director"></span></p>
-            <p><strong>主演:</strong> <span id="actors"></span></p>
             <p><strong>国家/语言/年代:</strong> <span id="meta"></span></p>
-            <p><strong>剧情介绍:</strong> <a href="#" id="showDescription">点击查看</a></p>
         </div>
     </div>
 </div>
 
+<!-- ✅ 底部栏 -->
+<div class="down-panel">
+    <h2 id="bottom_title">剧名 - 集数</h2>
+    <p><strong>番号:</strong> <span id="idcode"></span></p>
+    <p><strong>出品厂商:</strong> <span id="company"></span></p>
+    <p><strong>发片日期:</strong> <span id="publish_date"></span></p>
+    <p><strong>剧情介绍:</strong> <a href="#" id="showDescription">点击查看</a></p>
+</div>
+
+<!-- ✅ 简介弹窗 -->
 <div id="descriptionModal">
     <div class="modal-content">
         <p id="description"></p>
@@ -190,13 +213,15 @@ const video = document.getElementById('video');
 const playlist = document.getElementById('playlist');
 const overlay = document.getElementById('overlay');
 const coverImg = document.getElementById('coverImg');
-const titleEl = document.getElementById('title');
-const statusEl = document.getElementById('status');
+const infoTitle = document.getElementById('info_title');
+const bottomTitle = document.getElementById('bottom_title');
 const categoryEl = document.getElementById('category');
-const directorEl = document.getElementById('director');
+const companyEl = document.getElementById('company');
+const idcodeEl = document.getElementById('idcode');
 const actorsEl = document.getElementById('actors');
 const metaEl = document.getElementById('meta');
 const descriptionEl = document.getElementById('description');
+const publishEl = document.getElementById('publish_date');
 const showDescription = document.getElementById('showDescription');
 
 let currentIndex = 0;
@@ -206,7 +231,7 @@ function getSeriesName() {
   return params.get('series') || 'default';
 }
 
-// ✅ 修改后的加载逻辑
+// ✅ 动态加载数据文件
 function loadSeriesData(seriesName) {
   const script = document.createElement('script');
   script.src = `2025/${seriesName}_data.js`;
@@ -222,14 +247,16 @@ function loadSeriesData(seriesName) {
 }
 
 function initPlayer() {
-  titleEl.textContent = seriesInfo.title || "剧名";
-  statusEl.textContent = seriesInfo.status || "";
-  categoryEl.textContent = seriesInfo.type || "";
-  directorEl.textContent = seriesInfo.company || "";
+  infoTitle.textContent = seriesInfo.title || "剧名";
+  bottomTitle.textContent = seriesInfo.title || "剧名";
+  idcodeEl.textContent = seriesInfo.IDcode || "";
+  companyEl.textContent = seriesInfo.company || "";
   actorsEl.textContent = seriesInfo.actress || "";
   metaEl.textContent = seriesInfo.meta || "";
   descriptionEl.textContent = seriesInfo.description || "";
-  if(seriesInfo.cover_url) coverImg.src = seriesInfo.cover_url;
+  publishEl.textContent = seriesInfo.publish_date || "";
+  categoryEl.textContent = seriesInfo.type || "";
+  if (seriesInfo.cover_url) coverImg.src = seriesInfo.cover_url;
 
   showDescription.onclick = function() {
     document.getElementById('descriptionModal').style.display = 'flex';
