--- a/index.html
+++ b/index.html
@@ -3,33 +3,34 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>御女宫 · 分类导航</title>
-<link rel="stylesheet" href="advertiseStyle.css">
-
+<title>频道首页</title>
 <style>
 body {
   margin: 0;
   font-family: "微软雅黑", sans-serif;
   background: #0d0d0d;
   color: #fff;
-  padding-top: 70px;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh; /* 让 footer 靠底 */
 }
 
-/* 标题 */
+/* 页面标题 */
 .page-title {
-  text-align: center;
-  font-size: 28px;
-  font-weight: bold;
-  color: #ffa500;
-  margin-bottom: 28px;
+    text-align: center;
+    font-size: 28px;
+    font-weight: bold;
+    color: #ffa500;
+    margin-bottom: 40px;
 }
 
-/* 分类卡片布局 */
+/* 卡片布局 */
 #companyGrid {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(260px, 1fr));
-  gap: 25px;
-  padding: 0 20px 40px;
+  grid-template-columns: repeat(3, 1fr); /* 一行三张最大化显示 */
+  gap: 20px;
+  margin-bottom: 40px;
 }
 
 /* 卡片 */
@@ -53,8 +54,9 @@ body {
   opacity: .55;
   transition: opacity .3s;
 }
-.card:hover img { opacity: .25; }
-
+.card:hover img {
+  opacity: .25;
+}
 .card-overlay {
   position: absolute;
   top: 50%; left: 50%;
@@ -67,101 +69,61 @@ body {
   text-shadow: 0 0 10px rgba(0,0,0,.8);
 }
 
-/* 频道底部导航列表 */
-.channel-box {
-  padding: 0 20px 50px;
+/* 文字列表 */
+.channel-list {
+  margin-top: 20px;
 }
-.channel-box a {
+.channel-list p {
+  margin: 6px 0;
+}
+.channel-list a {
   color: #ffa500;
   text-decoration: none;
-  font-size: 18px;
 }
-.channel-box a:hover { text-decoration: underline; }
 
+/* 底部 footer */
+#footer-placeholder {
+  margin-top: auto;
+}
 </style>
 </head>
 <body>
 
-<!-- 顶部 header -->
-<div id="header-placeholder"></div>
-
-<!-- 页面标题（会自动变成 文件夹名 + 频道首页） -->
-<h1 class="page-title" id="page-title">御女宫网站分类</h1>
-
-<!-- 分类导航卡片区 -->
+<h1 class="page-title" id="page-title">御女宫 · 分类导航</h1>
+ 
+<!-- 底部三个卡片 -->
 <div id="companyGrid"></div>
 
-<!-- 广告区 -->
-<div id="advertise" style="padding:20px;">
-  <object data="advertise.html" type="text/html" style="width:100%;height:400px;"></object>
-</div>
-
-<hr style="border-color:#333;">
-
-<h2 style="text-align:center; color:#ffa500;">频道目录首页</h2>
-
-<div class="channel-box">
-  <p><a href="./CN_AV/index.html">CN_AV</a></p> 
-  <p><a href="./HongKongSex/index.html">HongKongSex</a></p> 
-  <p><a href="./JAV/index.html">JAV</a></p> 
-  <p><a href="./video/index.html">video</a></p> 
-  <p><a href="./小说频道总目录/index.html">小说频道总目录</a></p> 
-  <p><a href="./少女阁/index.html">少女阁</a></p> 
-  <p><a href="./御女宫网页自跳转/index.html">御女宫网页自跳转</a></p> 
-  <p><a href="./日本频道总目录/index.html">日本频道总目录</a></p> 
-  <p><a href="./水果派AV频道总目录/index.html">水果派AV频道总目录</a></p> 
-  <p><a href="./漫画频道总目录/index.html">漫画频道总目录</a></p> 
-  <p><a href="./福利姬频道总目录/index.html">福利姬频道总目录</a></p> 
-  <p><a href="./韩国少女频道/index.html">韩国少女频道</a></p> 
-</div>
-
 <!-- 底部 footer -->
-<div id="footer-placeholder"></div>
+<div id="footer-placeholder"></div> 
 
 <script>
-// 根据当前目录自动设置页面标题
-let parts = window.location.pathname.split("/").filter(p => p !== "");
-let folderName = parts.length > 0 ? decodeURIComponent(parts[parts.length - 1]) : "首页";
-document.getElementById("page-title").innerText = folderName + " · 分类导航";
-document.title = folderName;
+// 底部三个卡片数据
+const companyList = [
+  { company: "国产AV网站", company_url: "./CN_AV/index.html", img_url: "https://picmeta2024.sbs/upload/vod/20230820-1/0795de893a1526f058a7512764085c20.jpg" },
+  { company: "日本AV", company_url: "./JAV/index.html", img_url: "https://picture.yoshiclub.xyz/20250327/370cdc51-a89c-421b-ad1f-f06b8551e8bc.jpg" },
+  { company: "COS福利姬图库", company_url: "./福利姬频道总目录/index.html", img_url: "https://tutu1.space/images/2025/10/04/6b7ff4a2a8d95d22cedc3788e2f4e4af.jpg" }
+];
 
-// 加载 header
-fetch("header.html")
+const container = document.getElementById("companyGrid");
+companyList.forEach(item => {
+  const div = document.createElement("div");
+  div.className = "card";
+  div.onclick = () => window.location.href = item.company_url;
+  div.innerHTML = `
+    <img src="${item.img_url}" alt="${item.company}">
+    <div class="card-overlay">
+      <div class="card-title">${item.company}</div>
+    </div>
+  `;
+  container.appendChild(div);
+});
+
+// 加载底部 footer.html
+fetch('https://yunvgong.com/footer.html')
   .then(r => r.text())
-  .then(html => {
-    document.getElementById("header-placeholder").innerHTML = html;
-    const script = document.createElement("script");
-    script.src = "header.js";
-    document.body.appendChild(script);
-  });
-
-// 加载 footer
-fetch("https://yunvgong.com/footer.html")
-  .then(r => r.text())
-  .then(html => document.getElementById("footer-placeholder").innerHTML = html);
-
-// 加载分类 JSON 数据
-fetch("https://yunvgong.com/category_net.json")
-  .then(r => r.json())
-  .then(list => render(list));
-
-function render(list) {
-  const box = document.getElementById("companyGrid");
-  box.innerHTML = "";
-  list.forEach(item => {
-    const img = item.img_url || "https://picture.yoshiclub.xyz/20230930/20230930013717874874.jpg";
-    const div = document.createElement("div");
-    div.className = "card";
-    div.onclick = () => window.location.href = item.company_url;
-    div.innerHTML = `
-      <img src="${img}">
-      <div class="card-overlay">
-        <div class="card-title">${item.company}</div>
-      </div>
-    `;
-    box.appendChild(div);
-  });
-}
+  .then(html => document.getElementById('footer-placeholder').innerHTML = html)
+  .catch(e => console.warn('无法加载 footer.html:', e));
 </script>
 
 </body>
