--- a/CN_SELFIE/header.html
+++ b/CN_SELFIE/header.html
@@ -7,8 +7,8 @@
   <div class="hamburger" id="hamburger">&#9776;</div>
 
   <nav id="navMenu">
-    <a href="/CN_SELFIE/HongKong">国产自拍</a>
-    <a href="/CN_SELFIE/Japan">情侣做爱</a>
+    <a href="/CN_SELFIE/Tanhua">探花系列</a>
+    <a href="/CN_SELFIE/SexSlave">性奴调教</a>
     <a href="/CN_SELFIE/Korea">KTV</a>
     <a href="https://t.me/yunvgongCN_SELFIE" target="_blank">香港三级电报群</a>
   </nav>
