--- a/CN_SELFIE/index.html
+++ b/CN_SELFIE/index.html
@@ -106,20 +106,20 @@ body {
   <div class="grid-3" id="categoryGrid"></div>
 </section>
 
-<!-- 香港三级专区 -->
+<!-- 探花系列 -->
 <section>
   <div class="section-title-row">
-    <div class="section-title">香港三级专区</div>
-    <a href="https://yunvgong.com/HongKongSex/HongKong" class="more-link" target="_blank">看更多 ›</a>
+    <div class="section-title">探花系列</div>
+    <a href="https://yunvgong.com/CN_SELFIE/Tanhua" class="more-link" target="_blank">看更多 ›</a>
   </div>
   <div class="drama-grid" id="hongkongGrid"></div> <!-- ✅ 改了 id -->
 </section>
 
-<!-- 日本三级 -->
+<!-- 性奴调教 -->
 <section>
   <div class="section-title-row">
-    <div class="section-title">日本三级专区</div>
-    <a href="https://yunvgong.com/HongKongSex/Japan" class="more-link" target="_blank">看更多 ›</a>
+    <div class="section-title">性奴调教</div>
+    <a href="https://yunvgong.com/CN_SELFIE/SexSlave" class="more-link" target="_blank">看更多 ›</a>
   </div>
   <div class="drama-grid" id="japanGrid"></div> <!-- ✅ 改了 id -->
 </section>
@@ -128,7 +128,7 @@ body {
 <section>
   <div class="section-title-row">
     <div class="section-title">韩国三级专区</div>
-    <a href="https://yunvgong.com/HongKongSex/Korea" class="more-link" target="_blank">看更多 ›</a>
+    <a href="https://yunvgong.com/CN_SELFIE/Korea" class="more-link" target="_blank">看更多 ›</a>
   </div>
   <div class="drama-grid" id="koreaGrid"></div>
 </section>
@@ -161,7 +161,7 @@ fetch('https://yunvgong.com/footer.html')
 
 /* 分类网格 */
 async function loadCategories() {
-  const res = await fetch("https://yunvgong.com/HongKongSex/category/new_cover.json");
+  const res = await fetch("https://yunvgong.com/CN_SELFIE/category/new_cover.json");
   const data = await res.json();
   const container = document.getElementById('categoryGrid');
   container.innerHTML = '';
@@ -177,7 +177,7 @@ async function loadCategories() {
 /* 最新发布A片 - 加载 latest_100.js */
 function loadLatestAV() {
   const script = document.createElement('script');
-  script.src = 'https://yunvgong.com/HongKongSex/category/latest_100.js';
+  script.src = 'https://yunvgong.com/CN_SELFIE/category/latest_100.js';
   script.onload = () => {
     if (typeof window.PAGE_DATA !== 'undefined') {
       const dramas = window.PAGE_DATA.slice(0, 30);
@@ -225,7 +225,7 @@ async function loadActresses(page = 1) {
 
   // 加载分页 JS
   const script = document.createElement('script');
-  script.src = `https://yunvgong.com/HongKongSex/category/actress_page/page_${page}.js${page>1 ? '?pages='+page : ''}`;
+  script.src = `https://yunvgong.com/CN_SELFIE/category/actress_page/page_${page}.js${page>1 ? '?pages='+page : ''}`;
 
   script.onload = () => {
     if(typeof window.PAGE_DATA === 'undefined'){
@@ -264,7 +264,7 @@ async function loadActresses(page = 1) {
 
 /* 厂商 */
 async function loadCompanyList() {
-  const res = await fetch("https://yunvgong.com/HongKongSex/category/company_all.json");
+  const res = await fetch("https://yunvgong.com/CN_SELFIE/category/company_all.json");
   const data = await res.json();
   const companies = data.filter(c=>c.company).slice(0,20);
   const target = document.getElementById('companyGrid');
@@ -279,11 +279,11 @@ async function loadCompanyList() {
 }
 
 /* 国产AV专区 */
-async function loadHongKongSexDramas() {
+async function loadCN_SELFIEDramas() {
   const target = document.getElementById('hongkongGrid'); // ✅ 改为 hongkongGrid
   target.innerHTML = '';
   const script = document.createElement('script');
-  script.src = 'https://yunvgong.com/HongKongSex/category/HongKongSex_page/page_1.js';
+  script.src = 'https://yunvgong.com/CN_SELFIE/category/CN_SELFIE_page/page_1.js';
   script.onload = () => {
     if (typeof window.PAGE_DATA !== 'undefined') {
       const list = window.PAGE_DATA.slice(0, 30);
@@ -314,7 +314,7 @@ async function loadJapanSexDramas() {
   const target = document.getElementById('japanGrid'); // ✅ 改为 japanGrid
   target.innerHTML = '';
   const script = document.createElement('script');
-  script.src = 'https://yunvgong.com/HongKongSex/category/Japan_page/page_1.js';
+  script.src = 'https://yunvgong.com/CN_SELFIE/category/Japan_page/page_1.js';
   script.onload = () => {
     if (typeof window.PAGE_DATA !== 'undefined') {
       const list = window.PAGE_DATA.slice(0, 30);
@@ -345,7 +345,7 @@ async function loadKoreaSexDramas() {
   const target = document.getElementById('koreaGrid'); // ✅ 改为 koreaGrid
   target.innerHTML = '';
   const script = document.createElement('script');
-  script.src = 'https://yunvgong.com/HongKongSex/category/Korea_page/page_1.js';
+  script.src = 'https://yunvgong.com/CN_SELFIE/category/Korea_page/page_1.js';
   script.onload = () => {
     if (typeof window.PAGE_DATA !== 'undefined') {
       const list = window.PAGE_DATA.slice(0, 30);
@@ -377,7 +377,7 @@ document.addEventListener('DOMContentLoaded', () => {
   loadLatestAV();
   loadActresses();
   loadCompanyList();
-  loadHongKongSexDramas();
+  loadCN_SELFIEDramas();
   loadJapanSexDramas();
   loadKoreaSexDramas();
 });
