--- a/CN_SELFIE/header.html
+++ b/CN_SELFIE/header.html
@@ -9,7 +9,13 @@
   <nav id="navMenu">
     <a href="/CN_SELFIE/Tanhua">探花系列</a>
     <a href="/CN_SELFIE/SexSlave">性奴调教</a>
-    <a href="/CN_SELFIE/Korea">KTV</a>
+	<a href="/CN_SELFIE/student">学生系列</a>
+	<a href="/CN_SELFIE/adulterousWife">淫妻系列</a>
+	<a href="/CN_SELFIE/incest">乱伦系列</a>
+	<a href="/CN_SELFIE/oralSex_page">口交</a>
+	<a href="/CN_SELFIE/RearEntry">后入</a>
+	<a href="/CN_SELFIE/DateRape">迷奸</a>
+    <a href="/CN_SELFIE/CouplesSex">情侣做爱</a>
     <a href="https://t.me/yunvgongCN_SELFIE" target="_blank">香港三级电报群</a>
   </nav>
 </div>
