--- a/CN_SELFIE/header.html
+++ b/CN_SELFIE/header.html
@@ -21,6 +21,9 @@
 	<a href="/CN_SELFIE/breasts">巨乳</a>  
 	<a href="/CN_SELFIE/Exposure">露出</a> 
 	<a href="/CN_SELFIE/91pron">91自拍</a>  
+	<a href="/CN_SELFIE/Harem">多女后宫</a>  
+	<a href="/CN_SELFIE/Lewd">多人淫乱</a> 
+ 
     <a href="https://t.me/yunvgongCN_SELFIE" target="_blank">香港三级电报群</a>
   </nav>
 </div>
