--- a/CN_SELFIE/header.html
+++ b/CN_SELFIE/header.html
@@ -31,7 +31,8 @@
 	<a href="/CN_SELFIE/virgin">处女</a> 
 	<a href="/CN_SELFIE/casualSex">约炮系列</a>  
 	<a href="/CN_SELFIE/wife">人妻系列</a> 
-	<a href="/CN_SELFIE/pregnantWoman">孕妇系列</a> 
+	<a href="/CN_SELFIE/pregnantWoman">孕妇系列</a>  
+	<a href="/CN_SELFIE/adultery">偷情系列</a> 
     <a href="https://t.me/yunvgongCN_SELFIE" target="_blank">香港三级电报群</a>
   </nav>
 </div>
